<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SAPo</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_productos">Producto: </string>
    <string name="title_activity_detalle_producto">DetalleProductoActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="facebook_app_id">154989634847136</string>

    <string name="action_logout">Logout</string>
    <string name="content_authority">com.example.android.sapo.app</string>
    <string name="sync_account_type">sapo.example.com</string>

<!-- Vista de productos -->
    <string name="producto_agregar_producto">Agregar nuevo producto.</string>

<!-- Vista de agregar producto -->
    <string name="agregar_producto_title">Complete el formulario para ingresar un nuevo producto.</string>
    <string name="agregar_producto_nombre">Nombre del producto.</string>
    <string name="agregar_producto_descripcion">Descripción del producto.</string>
    <string name="agregar_producto_stock">Stock del producto.</string>
    <string name="agregar_producto_enviar">Enviar</string>


</resources>
