<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_producto_title"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:id="@+id/agregar_producto_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/agregar_producto_nombre"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/agregar_producto_descripcion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/agregar_producto_descripcion" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/agregar_producto_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="left"
            android:hint="@string/agregar_producto_stock" />

        <Button
            android:id="@+id/agregar_producto_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/agregar_producto_enviar" />
    </RelativeLayout>
</LinearLayout>

